# CPL-Ski-Safari

./: CMakeLists.txt  LICENSE  README.md  background.c  background.h  camera.c  camera.h  flowey.c  flowey.h  game.c  gui.c  gui.h  obstacle.c  obstacle.h  player.c  player.h  resource.c  resource.h  wave.c  wave.h
Resources/Audio/: ingame.pkf
